plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'Project4'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	corenlp_version = '4.2.2'
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	// https://mvnrepository.com/artifact/com.google.api-client/google-api-client
// https://mvnrepository.com/artifact/com.google.api-client/google-api-client
	implementation 'com.google.api-client:google-api-client:2.6.0'

// https://mvnrepository.com/artifact/org.modelmapper/modelmapper
	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.0'
	// https://mvnrepository.com/artifact/com.paypal.sdk/paypal-core
	implementation group: 'com.paypal.sdk', name: 'paypal-core', version: '1.7.2'
	// https://mvnrepository.com/artifact/com.paypal.sdk/rest-api-sdk
	implementation group: 'com.paypal.sdk', name: 'rest-api-sdk', version: '1.14.0'

	// https://mvnrepository.com/artifact/com.paypal.sdk/rest-api-sdk
	implementation group: 'com.paypal.sdk', name: 'rest-api-sdk', version: '1.14.0'



	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'com.google.cloud:google-cloud-storage:2.17.2'
	// PDF dependencies


	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	// ModelMapper
	implementation group: 'org.modelmapper', name: 'modelmapper', version: '3.2.0'
	implementation 'org.modelmapper:modelmapper:3.1.1'
	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	// Jakarta Mail
	implementation group: 'com.sun.mail', name: 'jakarta.mail', version: '2.0.1'
	// Lombok
	compileOnly 'org.projectlombok:lombok'


	runtimeOnly 'com.mysql:mysql-connector-j'

	annotationProcessor 'org.projectlombok:lombok'
	// MySQL
	runtimeOnly 'com.mysql:mysql-connector-j'
	// Development tools
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	// Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	// Spring Boot Starter Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation:3.2.4'
	// Spring Boot Starter WebSocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket:3.2.4'
	// Spring Boot Starter Mail
	implementation 'org.springframework.boot:spring-boot-starter-mail:3.2.4'
	// SpringDoc OpenAPI
	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.5.0'
	// Thumbnailator
	implementation 'net.coobird:thumbnailator:0.4.8'
	// SendGrid
	implementation group: 'com.sendgrid', name: 'sendgrid-java', version: '4.10.2'
	// Spring Boot Starter Logging
	implementation group: 'org.springframework.boot', name: 'spring-boot-starter-logging', version: '3.3.0'

// https://mvnrepository.com/artifact/com.itextpdf/itextpdf
	implementation group: 'com.itextpdf', name: 'itextpdf', version: '5.5.13.4'
// https://mvnrepository.com/artifact/com.google.code.gson/gson
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.11.0'
// https://mvnrepository.com/artifact/org.apache.poi/poi
	implementation group: 'org.apache.poi', name: 'poi', version: '5.2.5'
// https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
	implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.5'
// https://mvnrepository.com/artifact/com.itextpdf/itext7-core
	implementation group: 'com.itextpdf', name: 'itext7-core', version: '8.0.4', ext: 'pom'
// https://mvnrepository.com/artifact/com.itextpdf/kernel
	implementation group: 'com.itextpdf', name: 'kernel', version: '8.0.4'
// https://mvnrepository.com/artifact/com.itextpdf/layout
	implementation group: 'com.itextpdf', name: 'layout', version: '8.0.4'
// https://mvnrepository.com/artifact/com.itextpdf/io
	implementation group: 'com.itextpdf', name: 'io', version: '8.0.4'


	// iTextPDF
	implementation group: 'com.itextpdf', name: 'html2pdf', version: '5.0.4'
	
	// Gson
	implementation group: 'com.google.code.gson', name: 'gson', version: '2.11.0'

}

tasks.named('test') {
	useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs << "-parameters"
}
